# idle-slayer-automation

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
actions/: Cargo.toml  bonus_stage_2.actions
actions/src/: main.rs
src/idle_slayer_automation/: __about__.py  __init__.py  cli.py
src/idle_slayer_automation/decision_making/: action_runner.py  core.py
src/idle_slayer_automation/image_processing/: core.py  overlay.py  rect.py  searcher.py
tests/: test_image_processing.py
