[package]
edition = "2021"
name = "actions"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.1", features = ["derive"]}
inputbot = {git = "https://github.com/obv-mikhail/InputBot", branch = "develop"}
winapi = { version = "0.3", features = ["winuser"] }
